crates/diffguard/tests/snapshots/snapshot_tests_work_7ef3eee3_cmd_doctor__snapshot_doctor_invalid_config.snap
---
source: crates/diffguard/tests/snapshot_tests_work_7ef3eee3_cmd_doctor.rs
expression: "format!(\"exit_code={:?}\\n\\nSTDOUT:\\n{}\\n\\nSTDERR:\\n{}\", exit_code,\nnormalized_stdout, stderr)"
---
exit_code=Some(1)

STDOUT:
git: PASS (git version X.XX.X)
git-repo: PASS
config: FAIL (TOML parse error at line 6, column 9
  |
6 | match = "[invalid(regex"
  |         ^^^^^^^^^^^^^^^^
invalid type: string "[invalid(regex", expected a sequence
)


STDERR:
